<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LevelActivity"
    android:weightSum="4"
    android:background="@color/Black">

    <TextView
        android:id="@+id/gameModeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/choose_level"
        android:fontFamily="@font/bangers"
        android:textSize="45sp"
        android:textColor="@color/colorMain"/>
    <TextView
        android:layout_below="@id/gameModeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:text="@string/hint"
        android:fontFamily="@font/bangers"
        android:textColor="@color/White"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/level1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_1"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level1"/>
            <Button
                android:id="@+id/level4"
                android:layout_below="@+id/level1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_4"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level4"/>
            <Button
                android:id="@+id/level7"
                android:layout_below="@+id/level4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_7"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level7"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/level2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_2"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level2"/>
            <Button
                android:id="@+id/level5"
                android:layout_below="@+id/level2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_5"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level5"/>
            <Button
                android:id="@+id/level8"
                android:layout_below="@+id/level5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_8"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level8"/>
            <Button
                android:id="@+id/level10"
                android:layout_below="@+id/level8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_10"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level10"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/level3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_3"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level3"/>
            <Button
                android:id="@+id/level6"
                android:layout_below="@+id/level3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_6"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level6"/>
            <Button
                android:id="@+id/level9"
                android:layout_below="@+id/level6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_level"
                android:text="@string/level_9"
                android:fontFamily="@font/bangers"
                android:textSize="30sp"
                android:textColor="@color/White"
                android:onClick="Level9"/>

        </RelativeLayout>

    </LinearLayout>
    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_back"
        android:onClick="GoBack"/>

</RelativeLayout>