<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/Black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:text="@string/setting_sound"
            android:fontFamily="@font/bangers"
            android:textSize="30sp"
            android:textColor="@color/colorMain"/>
        <Switch
            android:id="@+id/switchSound"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:theme="@style/SwitchTheme"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_level"
            android:fontFamily="@font/bangers"
            android:textSize="30sp"
            android:textColor="@color/colorMain"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <RadioButton
            android:id="@+id/radioEasy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/setting_radioEasy"
            android:fontFamily="@font/bangers"
            android:textSize="20sp"
            android:textColor="@color/colorMain"
            android:buttonTint="@color/colorMain"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radioHard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/setting_radioHard"
            android:fontFamily="@font/bangers"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/colorMain"
            android:buttonTint="@color/colorMain"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_exit"
            android:onClick="Exit"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_menu"
            android:onClick="Menu"/>
    </RelativeLayout>

</LinearLayout>